// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Footer Component > renders with default props and matches snapshot 1`] = `
<footer
  class="w-full bg-background-secondary border-t border-foreground/10"
>
  <div
    class="container mx-auto px-4 py-8 md:py-12"
  >
    <div
      class="grid grid-cols-1 md:grid-cols-3 gap-8"
    >
      <div
        class="space-y-3"
      >
        <h3
          class="text-lg font-bold text-primary"
        >
          中国散打 China Sanda Club
        </h3>
        <p
          class="text-sm text-foreground/80 leading-relaxed"
        >
          World-class Sanda martial arts training club offering expert coaching, flexible schedules, and programs for all skill levels.
        </p>
        <p
          class="text-sm text-foreground/80 leading-relaxed"
        >
          世界一流的散打搏击俱乐部
        </p>
      </div>
      <div
        class="space-y-3"
      >
        <h3
          class="text-lg font-bold text-foreground"
        >
          Quick Links
        </h3>
        <ul
          class="space-y-2"
        />
      </div>
      <div
        class="space-y-3"
      >
        <h3
          class="text-lg font-bold text-foreground"
        >
          Contact Us 联系我们
        </h3>
        <ul
          class="space-y-2 text-sm text-foreground/80"
        >
          <li>
            <span
              class="font-medium text-foreground"
            >
              Address:
            </span>
            <br />
             
            <br />
            , 
             
            <br />
          </li>
          <li>
            <span
              class="font-medium text-foreground"
            >
              地址:
            </span>
            <br />
            , 
            <br />
          </li>
          <li>
            <span
              class="font-medium text-foreground"
            >
              Phone 联系电话:
            </span>
            <br />
          </li>
          <li>
            <span
              class="font-medium text-foreground"
            >
              Email 邮箱:
            </span>
            <br />
            <a
              class="hover:text-primary transition-colors"
              href="mailto:undefined"
            />
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div
    class="border-t border-foreground/10 bg-background"
  >
    <div
      class="container mx-auto px-4 py-4"
    >
      <p
        class="text-center text-sm text-foreground/60"
      >
        © 
        2025
         China Sanda Club. All rights reserved.
      </p>
    </div>
  </div>
</footer>
`;

exports[`Footer Component > renders with navigation items and matches snapshot 1`] = `
<footer
  class="w-full bg-background-secondary border-t border-foreground/10"
>
  <div
    class="container mx-auto px-4 py-8 md:py-12"
  >
    <div
      class="grid grid-cols-1 md:grid-cols-3 gap-8"
    >
      <div
        class="space-y-3"
      >
        <h3
          class="text-lg font-bold text-primary"
        >
          中国散打 China Sanda Club
        </h3>
        <p
          class="text-sm text-foreground/80 leading-relaxed"
        >
          World-class Sanda martial arts training club offering expert coaching, flexible schedules, and programs for all skill levels.
        </p>
        <p
          class="text-sm text-foreground/80 leading-relaxed"
        >
          世界一流的散打搏击俱乐部
        </p>
      </div>
      <div
        class="space-y-3"
      >
        <h3
          class="text-lg font-bold text-foreground"
        >
          Quick Links
        </h3>
        <ul
          class="space-y-2"
        >
          <li>
            <a
              class="text-sm text-foreground/80 hover:text-primary transition-colors"
              href="/"
            >
              Home
               
              首页
            </a>
          </li>
          <li>
            <a
              class="text-sm text-foreground/80 hover:text-primary transition-colors"
              href="/classes"
            >
              Classes
               
              课程安排
            </a>
          </li>
          <li>
            <a
              class="text-sm text-foreground/80 hover:text-primary transition-colors"
              href="/coaches"
            >
              Coaches
               
              教练团队
            </a>
          </li>
          <li>
            <a
              class="text-sm text-foreground/80 hover:text-primary transition-colors"
              href="/pricing"
            >
              Pricing
               
              学费价格
            </a>
          </li>
          <li>
            <a
              class="text-sm text-foreground/80 hover:text-primary transition-colors"
              href="/gallery"
            >
              Gallery
               
              精彩回顾
            </a>
          </li>
          <li>
            <a
              class="text-sm text-foreground/80 hover:text-primary transition-colors"
              href="/contact"
            >
              Contact
               
              联系方式
            </a>
          </li>
        </ul>
      </div>
      <div
        class="space-y-3"
      >
        <h3
          class="text-lg font-bold text-foreground"
        >
          Contact Us 联系我们
        </h3>
        <ul
          class="space-y-2 text-sm text-foreground/80"
        >
          <li>
            <span
              class="font-medium text-foreground"
            >
              Address:
            </span>
            <br />
            18
             
            Norwich Street
            <br />
            Eden Terrace
            , 
            Auckland
             
            1021
            <br />
            New Zealand
          </li>
          <li>
            <span
              class="font-medium text-foreground"
            >
              地址:
            </span>
            <br />
            新西兰
            , 
            奥克兰
            <br />
            诺里奇街18号
          </li>
          <li>
            <span
              class="font-medium text-foreground"
            >
              Phone 联系电话:
            </span>
            <br />
            0279662222
          </li>
          <li>
            <span
              class="font-medium text-foreground"
            >
              Email 邮箱:
            </span>
            <br />
            <a
              class="hover:text-primary transition-colors"
              href="mailto:chinasandaclub@gmail.com"
            >
              chinasandaclub@gmail.com
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div
    class="border-t border-foreground/10 bg-background"
  >
    <div
      class="container mx-auto px-4 py-4"
    >
      <p
        class="text-center text-sm text-foreground/60"
      >
        © 
        2025
         China Sanda Club. All rights reserved.
      </p>
    </div>
  </div>
</footer>
`;
